--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.0",
-    "axios": "^0.21.1",
+    "axios": "^0.21.1", 
     "canvasjs-react-charts": "^1.0.5",
     "cra-template": "1.1.2",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
